--- a/static/templates/welcome.html
+++ b/static/templates/welcome.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
     <meta charset="UTF-8">
     <title>PiBell Devices</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="/js/closure-library/closure/goog/base.js"></script>
+    <script src="/js/watney.js"></script>
+    <script src="/js/mail.js"></script>
+    <script src="/js/mailhandler.js"></script>
+    <script src="/js/app.js"></script>
 </head>
+
 <body>
-    <h1>Dave stinkt dolle! Jetzt weiss es die ganze Welt!</h1>
+    <h1>This is the Watney Mail Frontend</h1>
 
     <div style="height: 50px"></div>
 
-    <table class="table table-bordered table-hover" style="width: 70%">
-        {{range $curMail := .mails}}
-            <tr>
-                <td>{{ $curMail.Header.Size }}</td>
-                <td>{{ $curMail.Header.Date }}</td>
-                <td>{{ $curMail.Header.Subject }}</td>
-                <td>{{ $curMail.Header.Sender }}</td>
-                <td>{{ $curMail.Header.Receiver }}</td>
-            </tr>
-        {{ end }}
+    <table id="mailTable" class="table table-bordered table-hover" style="width: 70%">
     </table>
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
+    <script >
+        start();
+    </script>
 </body>
 </html>
