--- a/static/templates/welcome.html
+++ b/static/templates/welcome.html
@@ -1,30 +1,44 @@
+{{ define "base" }}
 <!DOCTYPE html>
 <html>
 
 <head lang="en">
     <meta charset="UTF-8">
-    <title>PiBell Devices</title>
+
+    <title>Watney Frontend</title>
+
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link href="/css/watney.css" rel="stylesheet">
+
+
+    <!-- Necessary JS code -->
     <script src="/js/closure-library/closure/goog/base.js"></script>
+    <script src="/js/soyutils_usegoog.js"></script>
     <script src="/js/watney.js"></script>
+    <script src="/js/soy-templates.js"></script>
     <script src="/js/mail.js"></script>
     <script src="/js/mailhandler.js"></script>
     <script src="/js/app.js"></script>
 </head>
 
 <body>
-    <h1>This is the Watney Mail Frontend</h1>
+    {{ template "topnav" }}
 
-    <div style="height: 50px"></div>
-
-    <table id="mailTable" class="table table-bordered table-hover" style="width: 70%">
-    </table>
+    <div class="container-fluid">
+        <div class="row">
+            {{ template "leftnav" }}
+            {{ template "mails" }}
+        </div>
+    </div>
 
     <!-- Latest compiled and minified JavaScript -->
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
-    <script >
+    <script>
         start();
     </script>
 </body>
+
 </html>
+{{ end }}
