Debug flag - introduced a debug flag into the conf file to choose between served JS files (either the plain files for dev mode or the compiled JS file for prod mode)

--- a/static/templates/welcome.html
+++ b/static/templates/welcome.html
@@ -13,9 +13,12 @@
 
 
     <!-- Necessary JS code -->
-    <script src="/js/watney-compiled.js"></script>
-    <!--<script src="/libs/closure-library/closure/goog/base.js"></script>-->
-    <!--<script src="/js/watney-deps.js"></script>-->
+    {{ if .IsDebug }}
+        <script src="/libs/closure-library/closure/goog/base.js"></script>
+        <script src="/js/watney-deps.js"></script>
+    {{ else }}
+        <script src="/js/watney-compiled.js"></script>
+    {{ end }}
     <script>
         goog.require('wat.app');
     </script>
