--- a/static/resources/css/watney.css
+++ b/static/resources/css/watney.css
@@ -90,35 +90,59 @@ body {
 .mail-page {
     background-color: #454b4c;
 }
-.mail-overview-header {
+.mail-overview .header {
     color: white;
     font-size: 25px;
     text-align: center;
     border: 2px solid #FFF;
 }
-.mail-overview-date {
+.mail-overview .header .date {
     border-right: 2px solid white;
 }
-.mail-overview-subject {
+.mail-overview .header .subject {
     border-right: 2px solid white;
 }
-.mail-overview-entry {
+.mail-overview .entry {
     color: #FFF;
     text-align: center;
-    border: 2px solid #FFF;
     padding: 0;
     overflow: hidden;
 }
-.mail-overview-entry-date {
-    border-right: 2px solid #FFF;
+.mail-overview .entry:hover {
+    background-color: #317461;
 }
-.mail-overview-entry-from {
-    font-size: 30px;
-    margin-top: 10px;
+.mail-overview .entry .date {
+    padding: 0
 }
-.mail-overview-entry-subject {
-    border-top: 2px solid white;
-    font-size: 30px;
+.mail-overview .entry .date .time {
+    font-size: 20px;
+}
+.mail-overview .entry .date .cal {
+    font-size: 18px;
+}
+.mail-overview .entry .content {
+    padding: 0;
+    text-align: left;
+}
+.mail-overview .entry .content .subject {
+    overflow: hidden;
+    font-size: 20px;
     padding: 0px;
-    height: 50px;
+}
+.mail-overview .entry .content .from {
+    font-size: 18px;
+}
+.mail-separator {
+    margin: 0;
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, transparent, rgba(233, 187, 28, 0.8), transparent);
+}
+.mail-content .header {
+    font-size: 20px;
+    color: white;
+}
+.mail-content .content {
+    height: 100%;
+    background-color: yellow;
 }
