--- a/static/templates/welcome.html
+++ b/static/templates/welcome.html
@@ -24,7 +24,7 @@
     </script>
 </head>
 
-<body>
+<body style="overflow: hidden;">
     {{ template "topnav" }}
 
     <div class="container-fluid">
