--- a/static/templates/welcome.html
+++ b/static/templates/welcome.html
@@ -1,4 +1,4 @@
-{{ define "base" }}
+{{ define "start" }}
 <html>
 
 <head lang="en">
@@ -11,34 +11,31 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="/css/watney.css" rel="stylesheet">
 
-
-    <!-- Necessary JS code -->
-    {{ if .IsDebug }}
-        <script src="/libs/closure-library/closure/goog/base.js"></script>
-        <script src="/js/watney-deps.js"></script>
-    {{ else }}
-        <script src="/js/watney-compiled.js"></script>
-    {{ end }}
-    <script>
-        goog.require('wat.app');
-    </script>
 </head>
 
 <body style="overflow: hidden;">
-    {{ template "topnav" }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <form class="form-signin" method="post">
+                <h2 class="form-signin-heading">Please sign in</h2>
+                <label for="inputEmail" class="sr-only">Email address</label>
+                <input id="inputEmail" class="form-control" placeholder="Email address" required=""
+                       autofocus="" type="email" name="name">
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input id="inputPassword" class="form-control" placeholder="Password" required=""
+                       type="password" name="password">
 
-    <div class="container-fluid">
-        <div class="row">
-            {{ template "leftnav" }}
-            {{ template "mails" }}
+                <div class="checkbox">
+                    <label>
+                        <input value="remember-me" type="checkbox"> Remember me
+                    </label>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            </form>
         </div>
     </div>
-
-    <!-- Latest compiled and minified JavaScript -->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
-    <script>
-        wat.app.start();
-    </script>
+</div>
 </body>
 
 </html>
