User authentication  - added new login fail message for wrong credentials  - added logout button

--- a/static/resources/css/watney.css
+++ b/static/resources/css/watney.css
@@ -159,3 +159,15 @@ div#mailItems > div.row:nth-of-type(2n) {
     height: 100%;
     background-color: yellow;
 }
+
+
+
+/**************************************************************************************************
+ ***                              Welcome/Login page                                            ***
+ **************************************************************************************************/
+
+.failed-Login {
+    font-size: 23px;
+    font-weight: bold;
+    color: red;
+}
