--- a/static/templates/welcome.html
+++ b/static/templates/welcome.html
@@ -35,6 +35,15 @@
             </form>
         </div>
     </div>
+    {{ if .FailedLogin }}
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="failed-Login">
+                    The Login was not successful. Please try again.
+                </div>
+            </div>
+        </div>
+    {{ end }}
 </div>
 </body>
 
