User authentication  - implemented web authentication through imap authentication

--- a/static/templates/welcome.html
+++ b/static/templates/welcome.html
@@ -43,6 +43,11 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="failed-Login">{{ .OrigError }}</div>
+            </div>
+        </div>
     {{ end }}
 </div>
 </body>
