Shutdown Hook: * implemented shutdown hook in watney, to release the IMAP connection * changed session cookie name to automatically created one

--- a/static/templates/topnav.html
+++ b/static/templates/topnav.html
@@ -12,13 +12,10 @@
             <a class="navbar-brand" href="#">Watney</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
+<!--            <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Help</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input class="form-control" placeholder="Search..." type="text">
-            </form>
+            </ul>-->
             <a class="btn btn-lg btn-primary navbar-right" href="logout">Logout</a>
         </div>
     </div>
