--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -53,8 +53,17 @@
             </div>
             <!-- Mail content row -->
             <div class="row content">
-                <div id="mailDetails_Content" class="col-md-12">
-
+                <div id="mailDetails_Content" class="col-md-12"></div>
+            </div>
+            <!-- Mail Reply Bar -->
+            <div class="row mail-reply-bar">
+                <div id="mailReplyItems" class="col-md-12 mail-reply-container">
+                    <div id="mailReplyItem_1" class="mail-reply-item">
+                        <div>hansmueller@...</div>
+                    </div>
+                    <div id="mailReplyItem_2" class="mail-reply-item">
+                        <div>achtung_sturz@...</div>
+                    </div>
                 </div>
             </div>
         </div>
