Welcome layout - minor changes in welcome layout

--- a/static/resources/css/watney.css
+++ b/static/resources/css/watney.css
@@ -8,6 +8,12 @@ body {
 }
 
 
+.mainPage {
+    overflow: hidden;
+    background-color: #666c6d;
+    color: #b29c51;
+}
+
 /*
  * Global add-ons
  */
