--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -45,7 +45,9 @@
             <div class="row control-bar">
                 <div class="col-md-12">
                     <div class="row">
-                        <button type="button" class="btn btn-lg btn-primary">Reply</button>
+                        <button id="mailReplyBtn" type="button" class="btn btn-lg btn-primary">
+                            Reply
+                        </button>
                         <button type="button" class="btn btn-lg btn-primary">Forward</button>
                         <button type="button" class="btn btn-lg btn-primary">Delete</button>
                     </div>
@@ -55,15 +57,14 @@
             <div class="row content">
                 <div id="mailDetails_Content" class="col-md-12"></div>
             </div>
-            <!-- Mail Reply Bar -->
-            <div class="row mail-reply-bar">
-                <div id="mailReplyItems" class="col-md-12 mail-reply-container">
-                    <div id="mailReplyItem_1" class="mail-reply-item">
-                        <div>hansmueller@...</div>
-                    </div>
-                    <div id="mailReplyItem_2" class="mail-reply-item">
-                        <div>achtung_sturz@...</div>
-                    </div>
+            <!-- New Mail Windows -->
+            <div class="row mail-window">
+                <div id="newMailWindowItems" class="col-md-12 mail-window-container">
+                </div>
+            </div>
+            <!-- Window Bar for new, open mails -->
+            <div class="row mail-window-bar">
+                <div id="newMailBarItems" class="col-md-12 mail-window-bar-container">
                 </div>
             </div>
         </div>
