--- a/static/templates/topnav.html
+++ b/static/templates/topnav.html
@@ -16,7 +16,7 @@
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Help</a></li>
             </ul>-->
-            <a class="btn btn-lg btn-primary navbar-right" href="logout">Logout</a>
+            <a class="btn btn-lg btn-primary navbar-right logout-Btn" href="logout">Logout</a>
         </div>
     </div>
 </nav>
