--- a/static/templates/welcome.html
+++ b/static/templates/welcome.html
@@ -18,10 +18,7 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <form class="form-signin" method="post">
-                <h2 class="form-signin-heading"
-                    style="margin-bottom: 50px; text-align: center;">
-                        Watney Sign-In
-                </h2>
+                <h2 class="form-signin-heading welcome-text">Watney Signin</h2>
                 <label for="inputEmail" class="sr-only">Email address</label>
                 <input id="inputEmail" class="form-control" placeholder="Email address" required=""
                        autofocus="" type="email" name="name">
@@ -34,8 +31,9 @@
                         <input value="remember-me" type="checkbox">Remember me
                     </label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block" style="margin-top: 75px;"
-                    type="submit">Sign in</button>
+                <button class="btn btn-lg btn-primary btn-block signin-btn" type="submit">
+                    Sign in
+                </button>
             </form>
         </div>
     </div>
