--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -49,7 +49,9 @@
                             Reply
                         </button>
                         <button type="button" class="btn btn-lg btn-primary">Forward</button>
-                        <button type="button" class="btn btn-lg btn-primary">Delete</button>
+                        <button id="mailDeleteBtn" type="button" class="btn btn-lg btn-primary">
+                            Delete
+                        </button>
                     </div>
                 </div>
             </div>
