Delete feature: * hide 'Forward' button for now * implemented frontend functionality for Delete feature (remove overview item + server flag update + show next mail) * implemented Seen flag server update from client-side

--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -48,7 +48,7 @@
                         <button id="mailReplyBtn" type="button" class="btn btn-lg btn-primary">
                             Reply
                         </button>
-                        <button type="button" class="btn btn-lg btn-primary">Forward</button>
+                        <!--<button type="button" class="btn btn-lg btn-primary">Forward</button>-->
                         <button id="mailDeleteBtn" type="button" class="btn btn-lg btn-primary">
                             Delete
                         </button>
