Ongoing refactoring work for client-side mailbox impl

--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -28,32 +28,21 @@
                 <div class="col-md-12">
                     <div class="row">
                         <div class="col-md-1">From:</div>
-                        <div id="mailDetails_From" class="col-md-11">hansmueller@foobar.com</div>
+                        <div id="mailDetails_From" class="col-md-11"></div>
                     </div>
                     <div class="row">
                         <div class="col-md-1">Subject:</div>
-                        <div id="mailDetails_Subject" class="col-md-11">TestMail to show how it looks on huge subjects
-                        </div>
+                        <div id="mailDetails_Subject" class="col-md-11"></div>
                     </div>
                     <div class="row">
                         <div class="col-md-1">To:</div>
-                        <div id="mailDetails_To" class="col-md-11">marcdrobek@unionwork.org</div>
+                        <div id="mailDetails_To" class="col-md-11"></div>
                     </div>
                 </div>
             </div>
             <!-- Control bar row -->
             <div class="row control-bar">
-                <div class="col-md-12">
-                    <div class="row">
-                        <button id="mailReplyBtn" type="button" class="btn btn-lg btn-primary">
-                            Reply
-                        </button>
-                        <!--<button type="button" class="btn btn-lg btn-primary">Forward</button>-->
-                        <button id="mailDeleteBtn" type="button" class="btn btn-lg btn-primary">
-                            Delete
-                        </button>
-                    </div>
-                </div>
+                <div id="ctrlBarContainer" class="col-md-12"></div>
             </div>
             <!-- Mail content row -->
             <div class="row content">
@@ -61,13 +50,11 @@
             </div>
             <!-- New Mail Windows -->
             <div class="row mail-window">
-                <div id="newMailWindowItems" class="col-md-12 mail-window-container">
-                </div>
+                <div id="newMailWindowItems" class="col-md-12 mail-window-container"></div>
             </div>
             <!-- Window Bar for new, open mails -->
             <div class="row mail-window-bar">
-                <div id="newMailBarItems" class="col-md-12 mail-window-bar-container">
-                </div>
+                <div id="newMailBarItems" class="col-md-12 mail-window-bar-container"></div>
             </div>
         </div>
     </div>
