--- a/static/templates/leftnav.html
+++ b/static/templates/leftnav.html
@@ -5,6 +5,7 @@
             <a href="#">Inbox <span class="sr-only">(current)</span></a>
         </li>
         <li id="Sent_Btn"><a href="#">Sent</a></li>
+        <li id="Spam_Btn"><a href="#">Spam</a></li>
         <li id="Trash_Btn"><a href="#">Trash</a></li>
     </ul>
 </div>
