Navigation improvement: * outsourced hardcoded navigation button HTML code into soy template * extended mailbox folder class with render function to take care of rendering the navigation buttons * added tests for new mailbox folder render method

--- a/static/resources/css/watney.css
+++ b/static/resources/css/watney.css
@@ -91,6 +91,15 @@ body {
     color: #eeeeee;
     background-color: #317461;
 }
+.nav-sidebar > li > .newMail {
+    display: none;
+}
+.nav-sidebar > li > .mailUpdate > .newMail {
+    display: inline;
+    font-weight: bold;
+    color: black;
+    font-size: 15px;
+}
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:focus {
     color: #eeeeee;
