--- a/static/templates/leftnav.html
+++ b/static/templates/leftnav.html
@@ -1,12 +1,6 @@
 {{ define "leftnav" }}
 <div class="col-sm-2 col-md-1 sidebar">
-    <ul class="nav nav-sidebar">
-        <li id="Inbox_Btn" class="active">
-            <a href="#">Inbox <span class="sr-only">(current)</span></a>
-        </li>
-        <li id="Sent_Btn"><a href="#">Sent</a></li>
-        <li id="Spam_Btn"><a href="#">Spam</a></li>
-        <li id="Trash_Btn"><a href="#">Trash</a></li>
+    <ul id="navBarContainer" class="nav nav-sidebar">
     </ul>
 </div>
 {{ end }}
