--- a/static/templates/leftnav.html
+++ b/static/templates/leftnav.html
@@ -1,5 +1,10 @@
 {{ define "leftnav" }}
 <div class="col-sm-2 col-md-1 sidebar">
+    <div class="actions-container">
+        <div id="newMailBtn" class="new-mail-button btn btn-primary btn-success btn-lg">
+            New Email
+        </div>
+    </div>
     <ul id="navBarContainer" class="nav nav-sidebar">
     </ul>
 </div>
