Loading Spinner icons: - implemented spinner icons for mail overview list and mail content field

--- a/static/templates/mails.html
+++ b/static/templates/mails.html
@@ -46,7 +46,7 @@
             </div>
             <!-- Mail content row -->
             <div class="row content">
-                <div id="mailDetails_Content" class="col-md-12"></div>
+                <div id="mailDetails_Content" class="col-md-12" style="overflow-x: hidden;"></div>
             </div>
             <!-- New Mail Windows -->
             <div class="row mail-window">
