--- a/static/resources/css/watney.css
+++ b/static/resources/css/watney.css
@@ -43,6 +43,74 @@ body {
     font-weight: bold;
 }
 
+/*.spinner div {*/
+    /*width: 30px;*/
+    /*height: 30px;*/
+    /*position: absolute;*/
+    /*left: -20px;*/
+    /*top: 40px;*/
+    /*background-color: #987452;*/
+    /*border-radius: 50%;*/
+    /*animation: move 4s infinite cubic-bezier(.2,.64,.81,.23);*/
+/*}*/
+/*.spinner div:nth-child(2) {*/
+    /*animation-delay: 150ms;*/
+/*}*/
+/*.spinner div:nth-child(3) {*/
+    /*animation-delay: 300ms;*/
+/*}*/
+/*.spinner div:nth-child(4) {*/
+    /*animation-delay: 450ms;*/
+/*}*/
+/*@keyframes move {*/
+    /*0% {left: 0%;}*/
+    /*75% {left:100%;}*/
+    /*100% {left:100%;}*/
+/*}*/
+
+
+.loading {
+    position: absolute;
+    top: 100px;
+    left: 40%;
+}
+.loading-bar {
+    display: inline-block;
+    width: 10px;
+    height: 75px;
+    border-radius: 4px;
+    animation: loading 1s ease-in-out infinite;
+    margin-right: 10px;
+}
+.loading-bar:nth-child(1) {
+    background-color: #3498db;
+    animation-delay: 0s;
+}
+.loading-bar:nth-child(2) {
+    background-color: #c0392b;
+    animation-delay: 0.09s;
+}
+.loading-bar:nth-child(3) {
+    background-color: #f1c40f;
+    animation-delay: .18s;
+}
+.loading-bar:nth-child(4) {
+    background-color: #27ae60;
+    animation-delay: .27s;
+}
+@keyframes loading {
+    0% {
+        transform: scale(1);
+    }
+    20% {
+        transform: scale(1, 2.2);
+    }
+    40% {
+        transform: scale(1);
+    }
+}
+
+
 /*
  * Top navigation
  * Hide default border to remove 1px line.
